--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ packages = [{include = "printmark_classification"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-
+hereutil = "^0.1.3"
+pandas = "^1.5.3"
+seaborn = "^0.12.2"
+pymysql = "^1.0.2"
+keyring = "^23.13.1"
 
 [build-system]
 requires = ["poetry-core"]
